--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,29 @@ body{
     height: 646px;
     display: flex;
     border-radius: 30px;
+    position: relative;
+    z-index: 1;
+}
+.first-banner-items:hover{
+    border: 3px solid rgb(221, 32, 32);
+}
+.first-banner-items::before{
+    transition: 0.5s all ease ;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    opacity: 0;
+    content: "";
+    background-color: rgb(196, 78, 78);
+}
+.first-banner-items:hover::before{
+    transition: 2s all ease;
+    left: 0;
+    right: 0;
+    opacity: 1;
+    z-index: -1;
 }
 .first-banner-heading{
     padding: 111px 106px;
@@ -43,11 +66,32 @@ body{
     padding: 16px 25px;
     background-color: #DD0000;
     border-radius: 5px;
+    transition: padding 1s linear  ;
+    position: relative;
+    z-index: 1;
 }
 .live-button:hover{
     cursor: pointer;
-    padding: 20px 29px;
-    border: 3px solid orangered;
+    padding: 25px 35px;
+    border: 5px solid rgb(63, 9, 7);
+}
+.live-button::before{
+    transition: 0.5s all ease ;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    opacity: 0;
+    content: "";
+    background-color: rgb(63, 9, 7) ;
+}
+.live-button:hover::before{
+    transition: 2s all ease;
+    left: 0;
+    right: 0;
+    opacity: 1;
+    z-index: -1;
 }
 .heading-image img{
     width: 581px;
